--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 
@@ -15,10 +15,13 @@ allprojects {
         jcenter()
         google()
     }
-}
 
-ext {
-    sdkVersion = 26
-    buildToolsVersion = '26.0.1'
-    supportLibVersion = '26.0.0'
+    project.ext {
+        buildToolsVersion = "27.0.3"
+        supportLibVersion = '27.1.0'
+        picassoVersion = "2.5.2"
+        minSdkVersion = 16
+        targetSdkVersion = 25
+        compileSdkVersion = 27
+    }
 }
