--- a/photoview/build.gradle
+++ b/photoview/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion rootProject.ext.letgoCompileSdkVersion
+    buildToolsVersion rootProject.ext.letgoBuildToolsVersion
 
     defaultConfig {
-        minSdkVersion project.ext.minSdkVersion
-        targetSdkVersion project.ext.targetSdkVersion
+        minSdkVersion project.ext.letgoMinSdkVersion
+        targetSdkVersion project.ext.letgoTargetSdkVersion
         versionCode 1
         versionName "1.0"
     }
